--- a/Crop yield and plantation analysis/Index.html
+++ b/Crop yield and plantation analysis/Index.html
@@ -1,129 +1,57 @@
 ﻿<!DOCTYPE html>
-
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
+<html lang="en">
 <head>
-    <meta charset="utf-8" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Crop & Plantation Analysis</title>
-    <link rel="stylesheet" type="text/css" href="CSS1.css">
+    <link rel="stylesheet" href="CSS2.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="container">
-        <h1>Crop & Plantation Analysis</h1>
-        <form id="analysisForm" action="/predict" method="post">
-            <label for="soilType">Soil Type:</label>
-            <select id="soilType" name="soilType" required>
-                <option value="" disabled selected>Select type of Soil</option>
-
-                <option value="sandy">Alluvial Soil</option>
-                <option value="clay">Sandy Soil</option>
-                <option value="loamy">Desert Soil</option>
-                <option value="silty">Laterite Soil</option>
-                <option value="peaty">Rigur Soil</option>
-
-            </select>
-
-            <label for="Rainfall">Rainfall :</label>
-            <select id="Rainfall" name="Rainfall" required>
-                <option value="" disabled selected>Rainfall mm</option>
-
-                <option value="Light Rain">Below 20</option>
-                <option value="Moderate Rain">20 to 75</option>
-                <option value="Heavy Rain">75 to 150 </option>
-                <option value="Severe Rain">Above 150 </option>
-
-            </select>
-
-            <label for="states">Select State:</label>
-            <select id="states" name="states" required>
-                <option value="" disabled selected>Select your state</option>
-                <option value="andaman-nicobar">Andaman and Nicobar Islands</option>
-                <option value="andhra-pradesh">Andhra Pradesh</option>
-                <option value="arunachal-pradesh">Arunachal Pradesh</option>
-                <option value="assam">Assam</option>
-                <option value="bihar">Bihar</option>
-                <option value="chandigarh">Chandigarh</option>
-                <option value="chhattisgarh">Chhattisgarh</option>
-                <option value="dadra-nagar-haveli-daman-diu">Dadra and Nagar Haveli and Daman and Diu</option>
-                <option value="delhi">Delhi</option>
-                <option value="goa">Goa</option>
-                <option value="gujarat">Gujarat</option>
-                <option value="haryana">Haryana</option>
-                <option value="himachal-pradesh">Himachal Pradesh</option>
-                <option value="jammu-kashmir">Jammu and Kashmir</option>
-                <option value="jharkhand">Jharkhand</option>
-                <option value="karnataka">Karnataka</option>
-                <option value="kerala">Kerala</option>
-                <option value="ladakh">Ladakh</option>
-                <option value="lakshadweep">Lakshadweep</option>
-                <option value="madhya-pradesh">Madhya Pradesh</option>
-                <option value="maharashtra">Maharashtra</option>
-                <option value="manipur">Manipur</option>
-                <option value="meghalaya">Meghalaya</option>
-                <option value="mizoram">Mizoram</option>
-                <option value="nagaland">Nagaland</option>
-                <option value="odisha">Odisha</option>
-                <option value="puducherry">Puducherry</option>
-                <option value="punjab">Punjab</option>
-                <option value="rajasthan">Rajasthan</option>
-                <option value="sikkim">Sikkim</option>
-                <option value="tamil-nadu">Tamil Nadu</option>
-                <option value="telangana">Telangana</option>
-                <option value="tripura">Tripura</option>
-                <option value="uttar-pradesh">Uttar Pradesh</option>
-                <option value="uttarakhand">Uttarakhand</option>
-                <option value="west-bengal">West Bengal</option>
-            </select>
-
-            <label for="nitrogen">Enter Nitrogen Percentage (%): </label>
-            <input type="number" id="nitrogen" name="nitrogen" min="0" max="140" step="1" required>
-
-            <label for="nitrogen">Enter Phosphorous Percentage (%): </label>
-            <input type="number" id="Phosphorous" name="Phosphorous" min="0" max="140" step="1" required>
-
-            <label for="nitrogen">Enter Potassium Percentage (%): </label>
-            <input type="number" id="Potassium" name="Potassium" min="0" max="140" step="1" required>
-
-
-
-            <label for="phLevel">Soil pH Level:</label>
-            <select id="phLevel" name="phLevel" required>
-                <option value="" disabled selected>Select pH level</option>
-
-                <option value="4.5-5.5">3.5 - 5.5 (Very Acidic)</option>
-                <option value="5.6-6.5">5.6 - 6.5 (Moderately Acidic)</option>
-                <option value="6.6-7.5">6.6 - 7.5 (Neutral)</option>
-                <option value="7.6-8.5">7.6 - 8.5 (Slightly Alkaline)</option>
-                <option value="8.6-9.5">8.6 - 10 (Alkaline)</option>
-            </select>
-
-            <label for="temperature">Average Temperature (°C):</label>
-            <select id="temperature" name="temperature" required>
-                <option value="" disabled selected>Select Temperature Range</option>
-
-                <option value="10-15">8 - 15°C (Cool)</option>
-                <option value="16-20">16 - 20°C (Mild)</option>
-                <option value="21-25">21 - 25°C (Warm)</option>
-                <option value="26-30">26 - 30°C (Hot)</option>
-                <option value="31-35">31 - 35°C (Very Hot)</option>
-                <option value="36-40">36 - 44°C (Extremely Hot)</option>
-            </select>
-
-
-            <label for="Humidity">Humidity in %</label>
-            <input type="number" id="Humidity" name="Humidity" min="0" max="140" step="1" required>
-
-
-
-            <button type="submit">Analyze</button>
-        </form>
-        {% if prediction %}
+    <header class="header">
         <div class="container">
-            <h2> Predicted Crop</h2>
-            <h2> Return Of Investment</h2>
-            <h3 class="text-info">{{ prediction }}</h3>
+            <h1>Crop & Plantation Analysis</h1>
+
         </div>
-        {% endif %}
-    </div>
-    <script src=""></script>
+
+        <nav>
+            <ul>
+                <li><a href="C:\Users\Ansh\Desktop\Crop yield and plantation analysis\Home Page.html">Home</a></li>
+                <li><a href="C:\Users\Ansh\Desktop\Crop yield and plantation analysis\Index.html">Analyze</a></li>
+                <li><a href="C:\Users\Ansh\Desktop\Crop yield and plantation analysis\About us page.html">About us</a></li>
+            </ul>
+        </nav>
+    </header>
+    <section class="hero">
+        <div class="container">
+            <h2>Maximize Your Crop Yield with Data-Driven Insights</h2>
+            <p>Utilize our advanced analysis tool to optimize your farming practices and ensure the best return on investment.</p>
+            <a href="C:\Users\Ansh\Desktop\Crop yield and plantation analysis\Index.html" class="btn">Analyze now!</a>
+        </div>
+    </section>
+
+    <section class="features">
+        <div class="container">
+            <h3>Features</h3>
+            <div class="feature-grid">
+                <div class="feature-item">
+                    <h4>Soil Analysis</h4>
+                    <p>Analyze soil type, pH levels, and more to find the best crops for your land.</p>
+                </div>
+                
+                <div class="feature-item">
+                    <h4>Crop and ROI</h4>
+                    <p>Uses input data to give most suitable Crop and also gives ROI value</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <footer class="footer">
+        <div class="container">
+            <p>&copy; 2024 Crop & Plantation Analysis. All rights reserved.</p>
+        </div>
+    </footer>
 </body>
 </html>
+
